@@ -67,6 +67,7 @@ tasks.test {
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.withType<org.springframework.boot.gradle.tasks.bundling.BootJar> {
